PIP-730 Add test case for ECL member of query with dot notation